Refactor: Code cleanup and improvements
- Improved code readability and structure
- Enhanced error handling and logging
- Optimized file operations and data management
- Updated dependencies and configurations
- Removed redundant code and unused imports